# pet-thounghts

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
routers/: file.py  ping.py
services/: llm.py
ui/: README.md  pubspec.yaml
ui/android/app/: build.gradle
ui/android/app/src/main/: AndroidManifest.xml
ui/android/app/src/main/kotlin/com/example/pet_thounghts_ui/: MainActivity.kt
ui/ios/Runner/: Info.plist
ui/ios/Runner.xcodeproj/: project.pbxproj
ui/lib/: main.dart
ui/lib/config/: config.dart
ui/lib/model/: reponse.dart
ui/lib/page/: home.dart
ui/linux/: CMakeLists.txt  my_application.cc
ui/macos/Runner.xcodeproj/: project.pbxproj
ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ui/macos/Runner/Configs/: AppInfo.xcconfig
ui/test/: widget_test.dart
ui/web/: index.html  manifest.json
ui/windows/: CMakeLists.txt
ui/windows/runner/: Runner.rc  main.cpp
