[tool.poetry]
name = "pet-thounghts"
version = "0.1.0"
description = ""
authors = ["Arthur Ming <guobin.ming@pwc.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
python-dotenv = "^1.0.1"
langchain = "^0.2.6"
langchain-google-genai = "^1.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
